Starting httpd server

--- a/rhq-plugin-apache-debug/Dockerfile
+++ b/rhq-plugin-apache-debug/Dockerfile
@@ -5,9 +5,11 @@ FROM jerr/rhq-agent-debug
 MAINTAINER Jeremie Lagarde <jer@printstacktrace.org>
 
 
-# install missing commands
+# install httpd server
 RUN yum -y install httpd
-RUN systemctl enable httpd.service
+RUN yum -y install augeas
+
+# launch httpd
+RUN echo "su root -c 'httpd -k start';"  >> /launch.sh
 
 EXPOSE 80
-
